gui/slick/css/style.css
/* ... */
.icon-notifiers-pushover {
    background-position: -377px 0px;
}

.icon-notifiers-boxcar2 {
    background-position: -414px 0px;
}

.icon-notifiers-nma {
    background-position: -450px 0px;
}

.icon-notifiers-pushalot {
    background-position: -486px 0px;
}

.icon-notifiers-pushbullet {
    background-position: -519px 0px;
}

.icon-notifiers-freemobile {
    background-position: -551px 0px;
}

.icon-notifiers-telegram {
    background-position: -587px 0px;
}

.icon-notifiers-twitter {
    background-position: -624px 0px;
}

.icon-notifiers-trakt {
    background-position: -659px 0px;
}

.icon-notifiers-email {
    background-position: -695px 0px;
}

.icon-notifiers-anime {
    background-position: -733px 0px;
}

.icon-notifiers-look {
    background-position: -769px 0px;
}

/* =======================================================================
manage*.mako
========================================================================== */

.manageTable th {
    white-space: normal;
    line-height: 24px;
}

.manageTable td.tableright {
    text-align: left;
}

td.tableright {
    text-align: center;
}

.optionWrapper {
    width: 450px;
    margin-left: auto;
    margin-right: auto;
    padding: 6px 12px;
}

.optionWrapper span.selectTitle {
    float: left;
    text-align: left;
    vertical-align: middle;
    width: 225px;
    padding: 6px 0px;
}

.optionWrapper div.selectChoices {
    float: left;
    width: 175px;
    margin-left: 25px;
}

.optionWrapper br {
    clear: both;
}

.manageCustom {
    text-align: center;
    padding: 6px;
    margin-left: 25px;
}

.separator {
    font-size: 90%;
    color: #333333;
}

a.whitelink {
    color: #fff;
}

/* =======================================================================
Global
========================================================================== */

span.path {
    padding: 3px 6px;
    color: #8b0000;
    background-color: #f5f1e4;
}

.align-left {
    text-align: left;
}

.h2footer {
    margin: -45px 0 8px;
    line-height: 18px;
}

span.quality {
    font: 12px/13px "Open Sans", verdana, sans-serif;
    background-image:-webkit-linear-gradient(top, rgba(255,255,255,0.08),rgba(255,255,255,0) 50%,rgba(0,0,0,0) 50%,rgba(0,0,0,0.25));
    background-image:-moz-linear-gradient(top, rgba(255,255,255,0.08),rgba(255,255,255,0) 50%,rgba(0,0,0,0) 50%,rgba(0,0,0,0.25));
    background-image:-o-linear-gradient(top, rgba(255,255,255,0.08),rgba(255,255,255,0) 50%,rgba(0,0,0,0) 50%,rgba(0,0,0,0.25));
    background-image:linear-gradient(to bottom, rgba(255,255,255,0.08),rgba(255,255,255,0) 50%,rgba(0,0,0,0) 50%,rgba(0,0,0,0.25));
    -webkit-box-shadow:inset 0 1px rgba(255,255,255,0.1),inset 0 -1px 3px rgba(0,0,0,0.3),inset 0 0 0 1px rgba(255,255,255,0.08),0 1px 2px rgba(0,0,0,0.15);
    box-shadow:inset 0 1px rgba(255,255,255,0.1),inset 0 -1px 3px rgba(0,0,0,0.3),inset 0 0 0 1px rgba(255,255,255,0.08),0 1px 2px rgba(0,0,0,0.15);
    text-shadow: 0px 1px rgba(0, 0, 0, 0.8);
    color: #FFFFFF;
    display: inline-block;
    padding: 2px 4px;
    text-align: center;
    vertical-align: baseline;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    white-space: nowrap;
}

span.any-hd {
    background-color: #2672b6;
    background: repeating-linear-gradient(
        -45deg,
        #2672b6,
        #2672b6 10px,
        #5b990d 10px,
        #5b990d 20px
    );
}

span.Custom {
    background-color: #621993;
}

span.HD {
    background-color: #2672B6;
}

span.HDTV {
    background-color: #2672B6;
}

span.HD720p {
    background-color: #5b990d;
}

span.HD1080p {
    background-color: #2672B6;
}

span.UHD-4K {
    background-color: #7500FF;
}

span.UHD-8K {
    background-color: #410077;
}

span.RawHD {
    background-color: #cd7300;
}

span.RawHDTV {
    background-color: #cd7300;
}

span.SD {
    background-color: #BE2625;
}

span.SDTV {
    background-color: #BE2625;
}

span.SDDVD {
    background-color: #BE2625;
}

span.Any {
    background-color: #666;
}

span.Unknown {
    background-color: #999;
}

span.Proper {
    background-color: #3F7F00;
}

span.false {
    color: #993333;
    /* red */
}

span.true {
    color: #669966;
    /* green */
}

option.flag {
    padding-left: 35px;
    background-repeat: no-repeat;
    background-position: 10px 50%;
}

/* Anime section for editShow */
.bwlWrapper {
    height:auto;
    margin: 0 auto;
}

#Anime {
    clear: both;
    overflow-x: hidden;
    overflow-y: hidden;
    font-size: 14px;
}

#Anime div.component-group-desc {
    float: left;
    width: 165px;
}

#Anime div.component-group-desc p {
    margin-bottom: 0.4em;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0.4em;
    width: 95%;
}

div.blackwhitelist{
    float:left;
    text-align: center;
}

div.blackwhitelist input {
    margin: 5px 0px;
}

div.blackwhitelist.pool select{
    width: 230px;
}

div.blackwhitelist.white select, div.blackwhitelist.black select {
    width: 150px;
}

div.blackwhitelist span {
    display: block;
    text-align: center;
}

div.blackwhitelist.anidb, div.blackwhitelist.manual {
    margin: 7px 0px;
}

/* =======================================================================
bootstrap Overrides
========================================================================== */

body {
    padding-top: 60px;
    overflow-y: scroll;
    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: #000;
}

html * {
    outline: 0 !important;
}

input[type="checkbox"] {
    margin: 2px 0px 0px;
    line-height: normal;
}

input[type="radio"] {
    margin: 2px 0px 0px;
    line-height: normal;
}

input, textarea, select, .uneditable-input {
    width: auto;
    color: #000;
}

.container-fluid {
    margin-left: 10px;
    margin-right: 10px;
}

.navbar-brand {
    padding: 0px;
}

/* navbar styling */
.navbar-default .navbar-brand {
    color: #ffffff;
}
/* ... */

